# igit

./: .bumpversion.cfg  .travis.yml  CONTRIBUTING.rst  README.rst  pyproject.toml  setup.py  tasks.py
.github/: ISSUE_TEMPLATE.md
.github/workflows/: constraints.txt
docs/: conf.py  index.rst  installation.rst  usage.rst
igit/: __init__.py  cli.py  compression.py  config.py  constants.py  demo.py  diffs.py  encoders.py  encryption.py  hashing.py  igit.py  interval_utils.py  irepo.py  mappers.py  merges.py  object_store.py  objects.py  refs.py  remote.py  remotes.py  repo.py  serializers.py  server.py  settings.py  storage.py  tokenize.py  trees.py  utils.py  visualizations.py
igit/models/: __init__.py  base.py  blob.py  packet.py  reference.py  repo.py  tree.py  user.py
igit/storage/: __init__.py  common.py  content_addressable.py  function.py  model.py  mongo.py  object_store.py  subfolder.py
igit/trees/: __init__.py  base.py  configs.py  intervals.py  labels.py
server_templates/: index.html
tests/: __init__.py  test_igit.py
